finished english translations.

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -6,7 +6,7 @@
   >
     <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="name">
-        Name
+        {{'itemName'| transloco}}
       </label>
       <input
         id="name"
@@ -19,7 +19,7 @@
     </div>
     <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="price">
-        Price
+        {{'price'| transloco}}
       </label>
       <input
         id="price"
@@ -32,7 +32,7 @@
     </div>
     <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="note">
-        Note
+        {{'details'| transloco}}
       </label>
       <input
         id="note"
@@ -45,7 +45,7 @@
     </div>
     <div class="mb-4">
       <label class="block text-gray-700 font-bold mb-2" for="link">
-        Link
+        {{'link'| transloco}}
       </label>
       <input
         id="link"
@@ -61,7 +61,7 @@
         type="submit"
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
       >
-        Add Item
+      {{'addItem'| transloco}}
       </button>
     </div>
   </form>
