--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,17 @@
 <div class="flex flex-col items-center">
-  <p class="mt-20 text-xl font-semibold">Hello {{ login.username }}!</p>
+  <p class="mt-20 text-xl font-semibold">{{'hello'| transloco}} {{login.username}}!</p>
   <div class="flex justify-center mt-10 space-x-4">
     <a [routerLink]="['/create-event']"
        class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-      Create an event
+       {{'createEvent'| transloco}}
     </a>
     <a [routerLink]="['/join-event']"
        class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-      Join an event
+       {{'joinEvent'| transloco}}
     </a>
     <a [routerLink]="['/events']"
        class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-      My events
+       {{'myEvents'| transloco}}
     </a>
   </div>
 </div>
