--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
-<nav class="bg-white px-4 sm:px-8 py-2 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 h-16">
-  <div class="container flex items-center justify-between mx-auto">
+<nav class="px-4 sm:px-8 py-2 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 h-14">
+  <div class="container mx-auto flex items-center justify-between">
     <a routerLink="dashboard" class="text-xl font-semibold text-gray-900 dark:text-white">
       Wishlist App
     </a>
-    <div *ngIf="login.loggedIn" class="flex items-center ml-auto space-x-4">
+    <div *ngIf="login.loggedIn" class="flex">
       <div class="relative">
+        <!-- User Dropdown -->
         <button type="button" class="flex items-center justify-center w-10 h-10 rounded-full bg-gray-800 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" aria-expanded="false" (click)="dropdownToggle()" (clickOutside)="showDropdown = false">
           <img class="w-8 h-8 rounded-full" src="../favicon.ico" alt="user photo">
         </button>
         <div *ngIf="showDropdown" class="absolute z-50 mt-4 right-0 w-48 py-2 bg-white rounded shadow dark:bg-gray-700 dark:divide-gray-600">
+          <!-- User Dropdown Content -->
           <div class="px-4 py-3 border-b border-gray-200 dark:border-gray-600">
             <p class="text-sm font-medium text-gray-900 truncate dark:text-white">{{login.username}}</p>
             <p class="text-sm text-gray-500 dark:text-gray-400">{{login.email}}</p>
@@ -29,6 +31,14 @@
           </ul>
         </div>
       </div>
+    </div>
+    <!-- Language Buttons (Always visible) -->
+    <div class="sm:flex hidden">
+      <button class="flex border bg-cover bg-center w-8 h-5 ml-5" (click)="changeLang('sl')" style="background-image: url('../assets/images/slo.png')"></button>
+      <button class="flex border bg-cover bg-center w-8 h-5 ml-3" (click)="changeLang('en')" style="background-image: url('../assets/images/uk.png')"></button>
+    </div>
+    <!-- Language Buttons for Small Screens -->
+    <div class="sm:hidden">
       <button class="flex border bg-cover bg-center w-8 h-5" (click)="changeLang('sl')" style="background-image: url('../assets/images/slo.png')"></button>
       <button class="flex border bg-cover bg-center w-8 h-5" (click)="changeLang('en')" style="background-image: url('../assets/images/uk.png')"></button>
     </div>
