--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-100 flex flex-col justify-center items-center">
+<div class="min-h-screen bg-gradient-to-r from-purple-500 to-pink-500 flex flex-col justify-center items-center">
   <h1 class="text-6xl font-bold text-gray-900 mb-8">{{'oops'| transloco}}</h1>
   <p class="text-2xl text-gray-600 mb-8">{{'notFound'| transloco}}</p>
   <a
