--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
-<div class="flex flex-col items-center">
+<div class="flex flex-col min-h-screen items-center bg-gradient-to-bl from-purple-500 to-pink-500">
   <p class="mt-20 text-xl font-semibold">{{'hello'| transloco}} {{login.username}}!</p>
-  <div class="flex justify-center mt-10 space-x-4">
-    <a [routerLink]="['/create-event']"
-       class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-       {{'createEvent'| transloco}}
-    </a>
+  <div class="flex flex-col sm:flex-row justify-center mt-6 sm:mt-10 space-y-4 sm:space-y-0 sm:space-x-4">
+   <a [routerLink]="['/create-event']"
+      class="relative flex items-center justify-center w-full sm:w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+         {{'createEvent'| transloco}}
+   </a>
     <a [routerLink]="['/join-event']"
        class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
        {{'joinEvent'| transloco}}
