--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,19 +1,12 @@
-<div
-  class="flex flex-col items-center justify-center h-screen bg-gradient-to-b from-purple-500 to-pink-500"
->
+<div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-l from-purple-500 to-pink-500">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
-    <h2 class="mt-6 text-center text-3xl font-extrabold text-white">
-      {{'newAccount'| transloco}}
-    </h2>
+    <h2 class="mt-6 text-center text-5xl font-extrabold text-white">{{ 'newAccount' | transloco }}</h2>
   </div>
 
-  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-    <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-      <form
-        (ngSubmit)="attemptRegister()"
-        [formGroup]="registerForm"
-        class="space-y-6"
-      >
+
+  <div class="mt-8">
+    <div class="bg-white py-8 px-4 shadow rounded-lg sm:px-10">
+      <form (ngSubmit)="attemptRegister()" [formGroup]="registerForm" class="space-y-6">
         <div>
           <label for="username" class="block font-bold text-gray-700">
             {{'username'| transloco}}
@@ -104,7 +97,7 @@
           >
           {{'register'| transloco}}
           </button>
-          <div class="text-sm">
+          <div class="text-sm ml-2">
             {{'already'| transloco}}
             <a
               class="ml-1 font-semibold text-purple-500 hover:text-purple-700"
