--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,4 +1,5 @@
-<div class="py-8 mt-20 mx-auto max-w-lg">
+<div class="flex flex-col min-h-screen items-center bg-gradient-to-bl from-purple-500 to-pink-500">
+<div class="py-8 mt-20 mx-auto max-w-lg w-full">
   <form [formGroup]="addItemForm" (ngSubmit)="addItem()" class="bg-white shadow-md rounded px-8 pt-2 pb-8 mb-4">
     <h2 class="py-4 text-2xl font-bold">{{'addItem'| transloco}}</h2>
     <div class="mb-4">
@@ -27,7 +28,7 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
   </svg>
 </button>
-
+</div>
 <!-- TailwindCSS classes -->
 <style>
   .input-field {
