--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center min-h-screen bg-gray-100 py-8 sm:py-12">
+<div class="flex flex-col items-center min-h-screen bg-gradient-to-bl from-purple-500 to-pink-500 py-8 sm:py-12">
   <p class="font-bold text-xl sm:text-2xl mt-7">{{ eventName }}</p>
 
   <div class="overflow-x-auto w-full sm:w-5/6 lg:w-3/4 mt-4 sm:mt-8">
