--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 min-h-screen">
+<div class="bg-gradient-to-bl from-purple-500 to-pink-500 min-h-screen">
   <div class="container mx-auto px-4 py-8 w-3/4 sm:w-3/4 lg:w-3/4">
     <h1 class="mt-16 text-3xl font-bold text-gray-800 mb-8">{{ 'myEvents' | transloco }}</h1>
     <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
