--- a/src/app/join-event/join-event.component.html
+++ b/src/app/join-event/join-event.component.html
@@ -1,4 +1,5 @@
-<div class="flex justify-center space-x-16 mt-28">
+<div class="flex flex-col min-h-screen items-center bg-gradient-to-bl from-purple-500 to-pink-500">
+<div class="flex w-full justify-center space-x-16 mt-28">
   <!-- Join an event -->
   <div class="w-full max-w-lg bg-white rounded-lg shadow-md">
     <h2 class="px-6 py-4 text-2xl font-bold">{{'joinEvent'| transloco}}</h2>
@@ -39,3 +40,4 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
   </svg>
 </button>
+</div>
