--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -15,14 +15,14 @@
         <label for="password" class="block text-gray-700 font-medium mb-2">{{'eventPassword'| transloco}}</label>
         <div class="flex items-center space-x-2">
           <input id="password" [type]="show ? 'text' : 'password'" formControlName="password" required class="input-field" placeholder="{{'eventPassPlaceholder'| transloco}}" />
-          <button class="btn-show-hide" (click)="passwordShow()">
+          <a class="btn-show-hide" (click)="passwordShow()">
             {{'showHidePass'| transloco}}
-          </button>
+          </a>
         </div>
       </div>
       <div class="flex items-center space-x-4">
         <label for="true" class="text-gray-700 font-medium">{{'multiple'| transloco}}</label>
-        <input id="true" type="radio" formControlName="solo"  value="false" checked/>
+        <input id="true" type="radio" formControlName="solo"  value="false"/>
         <label for="true">{{'yes'| transloco}}</label>
         <input id="false" type="radio" formControlName="solo" value="true"/>
         <label for="false">{{'no'| transloco}}</label>
@@ -54,6 +54,8 @@
   }
 
   .btn-show-hide {
+    user-select: none;
+    cursor: pointer;
     padding: 0.5rem;
     border: 1px solid #4f46e5;
     border-radius: 0.375rem;
