--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -69,10 +69,11 @@
 
         <div
         class="relative block w-full rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700"
-        *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+        *ngIf="email?.invalid && (email?.dirty || email?.touched) || pass"
       >
         <div *ngIf="email?.errors?.['required']">{{'emailRequired'| transloco}}</div>
         <div *ngIf="email?.errors?.['email']">{{'emailFormat'| transloco}}</div>
+        <div *ngIf="pass">{{'passwordMatch'| transloco}}</div>
       </div>
       <div
         class="relative block w-full rounded border border-red-400 bg-red-100 px-4 py-3 text-red-700"
